// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`config > getConfig default 1`] = `
{
  "disabled": false,
  "exclude": [
    /node_modules/i,
  ],
  "mediaQuery": false,
  "minRemValue": 0,
  "propList": [
    "font",
    "font-size",
    "line-height",
    "letter-spacing",
  ],
  "replace": true,
  "rootValue": 16,
  "selectorBlackList": [],
  "transformUnit": "px",
  "unitPrecision": 5,
}
`;

exports[`config > getConfig with wild prop 1`] = `
{
  "disabled": false,
  "exclude": [
    /node_modules/i,
  ],
  "mediaQuery": false,
  "minRemValue": 0,
  "propList": [
    "*",
  ],
  "replace": true,
  "rootValue": 16,
  "selectorBlackList": [],
  "transformUnit": "px",
  "unitPrecision": 5,
}
`;
